--- a/Sources/style.css
+++ b/Sources/style.css
@@ -14,7 +14,6 @@ button {
 }
 
 a:hover {
-    
     text-decoration: none;
     cursor: pointer;
 }
@@ -749,27 +748,6 @@ h4 {
     margin-top: 50px;
 }
 
-.col-sm-6{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 10px;
-}
-
-.text-bg {
-    font-size: 22px;
-    max-width: 600px;
-    margin: auto;
-}
-
-.text-quote {
-    font-size: 20px;
-    font-style: italic;
-    max-width: 600px;
-    margin: auto;
-    padding-bottom: 10px;
-}
-
 .avatar {
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
@@ -844,7 +822,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.jpg");
+    background-image: url("img/image-de-presentation.bmp");
 }
 
 @media (max-width: 1024px) {
