--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ a:hover {
 .texture-paper::before {
     background: url("img/texture-paper.png");
     background-size: 280px 280px;
-    z-index: -5;
 }
 
 .b-parallax {
@@ -460,7 +459,9 @@ nav .caret {
     background: rgba(0, 0, 0, .3);
 }
 
-
+button {
+    outline: none!important;
+}
 .btn-rd {
     border-radius: 40px;
 }
@@ -790,6 +791,15 @@ figcaption{
     margin-bottom: 30px;
 }
 
+.text-width{
+    margin: auto;
+    width: 400px;
+}
+
+.text-width-long{
+    margin: auto;
+    max-width: 600px;
+}
 
 .avatar {
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
@@ -819,7 +829,6 @@ figcaption{
 
 .tc-white {
     color: #FFFFFF!important;
-    font-weight: bold;
 }
 
 .btn-atomic-tangerine {
@@ -863,11 +872,11 @@ figcaption{
 
 .bg-banniere {
     background-image: url("img/la-chouette-agence-banniere.jpg");
-    z-index: -10;
 }
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.jpg");
+    z-index: -10;
 }
 
 @media (max-width: 1024px) {
